--- a/src/main/resources/com/waoap/addressbook/main-view.fxml
+++ b/src/main/resources/com/waoap/addressbook/main-view.fxml
@@ -4,24 +4,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
-<AnchorPane prefHeight="645.0" prefWidth="450.0"
-            xmlns="http://javafx.com/javafx/17.0.2-ea"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.waoap.addressbook.MainController">
-    <TextField fx:id="keywordField" layoutX="15.0" layoutY="15.0"
-               prefWidth="275.0" promptText="关键词：姓名/电话号码/邮箱"/>
-    <Button fx:id="searchButton" layoutX="300.0" layoutY="15.0"
-            mnemonicParsing="false" text="搜索"/>
-    <ListView fx:id="contactsList" layoutX="15.0" layoutY="60.0"
-              prefHeight="540.0" prefWidth="400.0"/>
-    <Button fx:id="addButton" layoutX="360.0" layoutY="15.0"
-            mnemonicParsing="false" text="新增"/>
-    <Text layoutX="15.0" layoutY="626.0" strokeType="OUTSIDE" strokeWidth="0.0"
-          text="操作日志："/>
-    <Text fx:id="logField" layoutX="135.0" layoutY="626.0" strokeType="OUTSIDE"
-          strokeWidth="0.0" textAlignment="RIGHT" wrappingWidth="280.0"/>
-    <VBox fx:id="navigationList" layoutX="428.0" layoutY="60.0"
-          prefHeight="495.0" prefWidth="8.0">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="645.0" prefWidth="450.0"
+            xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="com.waoap.addressbook.MainController">
+    <TextField fx:id="keywordFieldName" layoutX="15.0" layoutY="15.0" prefWidth="80.0" promptText="姓名"/>
+    <Button fx:id="searchButton" layoutX="300.0" layoutY="15.0" mnemonicParsing="false" text="查找"/>
+    <ListView fx:id="contactsList" layoutX="15.0" layoutY="60.0" prefHeight="540.0" prefWidth="400.0"/>
+    <Button fx:id="addButton" layoutX="360.0" layoutY="15.0" mnemonicParsing="false" text="新增"/>
+    <Text layoutX="15.0" layoutY="626.0" strokeType="OUTSIDE" strokeWidth="0.0" text="操作日志："/>
+    <Text fx:id="logField" layoutX="135.0" layoutY="626.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="RIGHT"
+          wrappingWidth="280.0"/>
+    <VBox fx:id="navigationList" layoutX="428.0" layoutY="60.0" prefHeight="495.0" prefWidth="8.0">
         <Label text="#"/>
         <Label text="A"/>
         <Label text="B"/>
@@ -50,4 +42,6 @@
         <Label text="Y"/>
         <Label text="Z"/>
     </VBox>
+    <TextField fx:id="keywordFieldTelephone" layoutX="100.0" layoutY="15.0" promptText="电话号码"/>
+    <TextField fx:id="keywordFieldEmail" layoutX="220.0" layoutY="15.0" prefWidth="75.0" promptText="邮箱"/>
 </AnchorPane>
